# EmbedPython

./: CMakeLists.txt  EmbedPython.pro  README.md
include/: Agent.h  NGLScene.h
python/: agent1.py  agent2.py
src/: Agent.cpp  NGLScene.cpp
